# air-quality-sensor

./: README.md  THIRD_PARTY_LICENCES
docker/: Dockerfile  README.md  (+1 more)
software/air-quality-sensor-nrf52/: CMakeLists.txt  README.rst  prj.conf
software/air-quality-sensor-nrf52/boards/: xiao_ble_nrf52840_sense.overlay
software/air-quality-sensor-nrf52/include/: air_quality_monitor.h  air_quality_sensor.h  bas.h  battery.h  bluetooth_handler.h  configs.h  ess.h  event_handler.h  led_controller.h  power_manager.h  scd4x.h  sensors.h  state_handler.h  variables.h
software/air-quality-sensor-nrf52/include/ble_services/: bas.h  ess.h
software/air-quality-sensor-nrf52/include/components/: battery_monitor.h  e_ink_display.h  e_paper_display.h  event_handler.h  flash_manager.h  sensors.h  state_handler.h  state_manager.h
software/air-quality-sensor-nrf52/include/drivers/: battery.h  bmp280.h  bmp390.h  e_ink_display.h  led_controller.h  scd4x.h
software/air-quality-sensor-nrf52/include/utils/: variables.h
software/air-quality-sensor-nrf52/src/: air_quality_monitor.c  air_quality_sensor.c  bas.c  battery.c  bluetooth_handler.c  bmp280.c  e_ink_display.c  ess.c  event_handler.c  led_controller.c  main.c  power_manager.c  scd4x.c  sensors.c  state_handler.c  variables.c
software/air-quality-sensor-nrf52/src/ble_services/: bas.c  ess.c
software/air-quality-sensor-nrf52/src/components/: battery_monitor.c  bluetooth_handler.c  e_ink_display.c  e_paper_display.c  event_handler.c  flash_manager.c  power_manager.c  sensors.c  state_handler.c  state_manager.c
(+68 files in other folders)
